Change the background for our process

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,4 +43,13 @@
   .text-blu {
     color: rgb(35, 45, 78);
   }
+
+  .shadow-skew {
+    box-shadow: 6px 2px 16px 0px rgba(136, 165, 191, 0.3),
+      -6px -2px 16px 0px rgba(255, 255, 255, 1);
+  }
+  .shadow-skew:hover {
+    box-shadow: 3px 3px 6px 0px #ccdbe8 inset,
+      -3px -3px 6px 1px rgba(255, 255, 255, 0.5) inset;
+  }
 }
