--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 :root {
   --color-primary-dark: #006a6f;
   --color-primary: #00747a;
-  --color-primary-light: #53b2b8;
+  --color-primary-light: #72b0b3;
 }
 
 @tailwind base;
@@ -10,11 +10,11 @@
 
 @layer base {
   button {
-    @apply tracking-wide rounded-xl;
+    @apply tracking-wide rounded-xl transition-shadow duration-300;
   }
 
   ::selection {
-    @apply bg-gray-200;
+    @apply bg-gray-200 bg-opacity-75;
   }
 
   * {
@@ -24,6 +24,15 @@
   a {
     @apply text-primary font-medium;
   }
+
+  input[type="text"],
+  textarea {
+    @apply rounded-xl text-lg transition duration-300 border-gray-300 focus:outline-none focus:ring-2  focus:ring-primary-light focus:border-primary-light shadow-sm  focus:shadow-md border placeholder-gray-400 placeholder-opacity-50;
+  }
+
+  textarea {
+    @apply resize-none;
+  }
 }
 
 @layer components {
@@ -31,7 +40,7 @@
     @apply pb-1 group-hover:text-black text-gray-500 font-normal transition duration-300 ease-in-out;
   }
   .menu-link {
-    @apply hover:text-primary text-2xl font-light transition-all duration-300;
+    @apply text-black hover:text-primary text-2xl font-light transition-all duration-300;
   }
 }
 
@@ -40,13 +49,21 @@
     @apply text-white bg-primary hover:bg-primary-dark;
   }
   .btn-large {
-    @apply p-4 text-xl;
+    @apply p-4 text-xl hover:shadow-lg;
+  }
+  .btn-md {
+    @apply p-2.5 text-lg  hover:shadow-md;
   }
 
   .bg-hero {
     background-image: url(https://svgshare.com/i/_hs.svg);
 
     @apply mt-12 bg-cover bg-center;
+  }
+  .bg-form {
+    background-image: url(https://svgshare.com/i/_hZ.svg);
+
+    @apply bg-cover bg-center;
   }
   .text-blu {
     color: rgb(35, 45, 78);
