--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@
 
   input[type="text"],
   textarea {
-    @apply rounded-xl text-lg transition duration-300 border-gray-300 focus:outline-none focus:ring-2  focus:ring-primary-light focus:border-primary-light shadow-sm  focus:shadow-md border placeholder-gray-400 placeholder-opacity-50;
+    @apply rounded-xl text-lg transition duration-300 focus:outline-none  shadow-sm  focus:shadow-md border placeholder-gray-400 placeholder-opacity-50;
   }
 
   textarea {
@@ -80,5 +80,12 @@
   .shadow-skew:hover {
     box-shadow: 3px 3px 6px 0px #ccdbe8 inset,
       -3px -3px 6px 1px rgba(255, 255, 255, 0.5) inset;
+  }
+
+  .input-invalid {
+    @apply ring-2 ring-red-400 focus:ring-2  focus:ring-red-400 focus:border-red-400  border-red-400;
+  }
+  .input-valid {
+    @apply border-gray-300 focus:ring-2  focus:ring-primary-light focus:border-primary-light;
   }
 }
