--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,10 +17,6 @@
     @apply bg-gray-200 bg-opacity-75;
   }
 
-  * {
-    scrollbar-color: #6969dd #e0e0e0;
-    scrollbar-width: thin;
-  }
   a {
     @apply text-primary font-medium;
   }
@@ -40,7 +36,7 @@
     @apply pb-1 group-hover:text-black text-gray-500 font-normal transition duration-300 ease-in-out;
   }
   .menu-link {
-    @apply text-black hover:text-primary text-2xl font-light transition-all duration-300;
+    @apply text-black hover:text-primary text-2xl font-light transition-all duration-300 cursor-pointer;
   }
 }
 
