Starting working on the card

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,7 @@
 
 @layer components {
   .navlink {
-    @apply pb-1 group-hover:text-black text-gray-500 font-normal transition duration-300 ease-in-out;
+    @apply pb-1 group-hover:text-black text-gray-500 text-base font-normal transition duration-300 ease-in-out;
   }
   .menu-link {
     @apply text-black hover:text-primary text-2xl font-light transition-all duration-300 cursor-pointer;
