feat: dark mode initial v1

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@
   }
 
   a {
-    @apply text-primary font-medium;
+    @apply text-light-primary font-medium dark:text-dark-primary;
   }
 
   input[type="text"],
@@ -33,7 +33,7 @@
 
 @layer components {
   .navlink {
-    @apply pb-1 group-hover:text-black text-gray-500 text-base font-normal transition duration-300 ease-in-out;
+    @apply pb-1 group-hover:text-black dark:group-hover:text-dark-content/90 text-gray-500 dark:text-dark-content text-base font-normal transition duration-300 ease-in-out;
   }
   .menu-link {
     @apply text-black hover:text-primary text-2xl font-light transition-all duration-300 cursor-pointer;
@@ -87,5 +87,9 @@
   }
   .input-valid {
     @apply border-gray-300 focus:ring-2  focus:ring-primary-light focus:border-primary-light;
+  }
+
+  .techStackLogo {
+    @apply w-12 h-12 sm:w-20 sm:h-20;
   }
 }
