--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,8 +35,9 @@
   .navlink {
     @apply pb-1 group-hover:text-black dark:group-hover:text-dark-content/90 text-gray-500 dark:text-dark-content text-base font-normal transition duration-300 ease-in-out;
   }
+
   .menu-link {
-    @apply text-black hover:text-primary text-2xl font-light transition-all duration-300 cursor-pointer;
+    @apply text-black dark:text-dark-content hover:text-primary text-2xl font-light transition-all duration-300 cursor-pointer hover:text-light-primary dark:hover:text-dark-primary;
   }
 
   .icon-btn {
