--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,7 @@
 
 @layer components {
   .navlink {
-    @apply pb-1 group-hover:text-black dark:group-hover:text-dark-content/90 text-gray-500 dark:text-dark-content text-base font-normal transition duration-300 ease-in-out;
+    @apply uppercase tracking-wide pb-1 group-hover:text-black dark:group-hover:text-dark-content/90 text-gray-500 dark:text-dark-content text-base font-normal transition duration-300 ease-in-out;
   }
 
   .menu-link {
@@ -93,4 +93,36 @@
   .techStackLogo {
     @apply w-12 h-12 sm:w-20 sm:h-20;
   }
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
