--- a/styles/globals.css
+++ b/styles/globals.css
@@ -112,17 +112,24 @@
   }
 }
 .slick-dots li.slick-active button:before {
+  display:block !important;
   color: #006a6f !important;
-  width: 30px !important;
-  height: 10px !important;
-  font-size: 18px !important;
+  width: 26px !important;
+
+  font-size: 12px !important;
+  background-color:  #006a6f;
+  border-radius: 10px;
+  text-indent: -99999px;
+  margin-top: 4px;
 }
 
+
 .slick-dots li button:before {
-  width: 30px !important;
+
   height: 10px !important;
   font-size: 12px !important;
   color: "#A0A8BB" !important;
+  display:inline-block;
 }
 .slick-prev:before,
 .slick-next:before {
@@ -131,5 +138,8 @@
   font-size: 18px !important;
 }
 .slick-dots {
-  bottom: -46px;
+  bottom: -44px !important;
+}
+.slick-dots li button:hover:before{
+  color: #A0A8BB;
 }
